envoy-java-ctlp/src/test/resources/envoy/test-envoy/listener.json
{
  "name": "sample-listener",
  "address": {
    "socket_address": {
      "protocol": "TCP",
      "address": "0.0.0.0",
      "port_value": 30010
    }
  },
  "filter_chains": [
    {
      "filters": [
        {
          "name": "envoy.filters.network.http_connection_manager",
          "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
            "stat_prefix": "ingress-http",
            "generate_request_id": true,
            "rds": {
              "config_source": {
                "ads": {},
                "resource_api_version": "V3"
              },
              "route_config_name": "sample-route-config"
            },
            "common_http_protocol_options": {
              "idle_timeout": "900s"
            },
            "http_filters": [
              {
                "name": "envoy.filters.http.cors",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
                }
              },
              {
                "name": "envoy.filters.http.ext_authz",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz",
                  "grpc_service": {
                    "envoy_grpc": {
                      "cluster_name": "sample-route-config"
                    },
                    "timeout": "3s"
                  },
                  "failure_mode_allow": true,
                  "transport_api_version": "V3"
                }
              },
              {
                "name": "envoy.filters.http.router",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router",
                  "start_child_span": true
                }
              }
            ],
            "http_protocol_options": {
              "accept_http_10": true
            },
            "access_log": [
              {
                "name": "envoy.access_loggers.file",
                "filter": {
                  "and_filter": {
                    "filters": [
                      {
                        "or_filter": {
                          "filters": [
                            {
                              "header_filter": {
                                "header": {
                                  "name": ":method",
                                  "string_match": {
                                    "exact": "HEAD"
                                  },
                                  "invert_match": true
                                }
                              }
                            },
                            {
                              "header_filter": {
                                "header": {
                                  "name": ":path",
                                  "string_match": {
                                    "exact": "/"
                                  },
                                  "invert_match": true
                                }
                              }
                            }
                          ]
                        }
                      },
                      {
                        "header_filter": {
                          "header": {
                            "name": "user-agent",
                            "string_match": {
                              "safe_regex": {
                                "google_re2": {},
                                "regex": "(GoogleHC/1.0|Envoy/HC|Go-http-client/1.1|ELB-HealthChecker/2.0)"
                              }
                            },
                            "invert_match": true
                          }
                        }
                      }
                    ]
                  }
                },
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                  "path": "/usr/local/app/logs/access.log",
                  "log_format": {
                    "text_format_source": {
                      "inline_string": "- %DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT% %START_TIME% %REQ(:AUTHORITY)% \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE%[%RESPONSE_FLAGS%] %BYTES_SENT% %DURATION% \"%REQ(USER-AGENT)%\"\n"
                    }
                  }
                }
              }
            ]
          }
        }
      ]
    }
  ]
}
