envoy-java-ctlp/src/test/resources/envoy/test-envoy/sample-cluster.json
{
  "name": "sample-cluster",
  "type": "LOGICAL_DNS",
  "connect_timeout": "5s",
  "dns_lookup_family": "V4_ONLY",
  "dns_refresh_rate": "60s",
  "load_assignment": {
    "cluster_name": "sample-service-provider",
    "endpoints": [
      {
        "lb_endpoints": [
          {
            "endpoint": {
              "address": {
                "socket_address": {
                  "address": "sample-service-provider.plaync.svc.cluster.local.",
                  "port_value": 8080
                }
              }
            }
          }
        ]
      }
    ]
  },
  "typed_extension_protocol_options": {
    "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
      "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
      "common_http_protocol_options": {
        "idle_timeout": "3s",
        "max_requests_per_connection": 100
      },
      "explicit_http_config": {
        "http_protocol_options": {}
      }
    }
  }
}
